# py-rabbitmq-api

./: .gitignore  README.md  alembic.ini  app.py  pyproject.toml  rabbitmq.yaml
migrations/: env.py
server/: worker.py
server/commands/: consumer.py  producer.py
server/core/: cli.py  consumer.py  database.py  logging.py  settings.py
server/core/queue/: __init__.py  queue.py  type.py
server/services/: consumer_service.py
