[tool.poetry]
name = "py-rabbitmq-api"
version = "0.1.0"
description = "worker de consumer e producer de mensagens usando python e rabbitmq."
authors = ["Douglas Panhota <douglaspands@gmail.com>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
pika = "^1.3.2"
typer = "^0.12.3"


[tool.poetry.group.mypy.dependencies]
ruff = "^0.4.5"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
